--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "LEC_8",
+  "name": "Fizer_A_lec9",
   "version": "1.0.0",
   "description": "homework",
   "main": "server.js",
-  "author": "AndreyFizer",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AndreyFizer/Fizer_A_lec9"
+  },
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AndreyFizer/Fizer_A_lec9/issues"
+  },
+  "homepage": "https://github.com/AndreyFizer/Fizer_A_lec9",
   "dependencies": {
     "express": "^4.12.3"
   }
